--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <script type="module" src="/src/main.jsx"></script>
-  <h1 class="title">Campaign Manager</h1>
+  <!-- <h1 class="title">Campaign Manager</h1> -->
   <div id="root"></div>
 </body>
 
